added function to routesfavorite
